[package]
name = "toon-monitor"
version = "0.1.0"
authors = ["Arto Rozenga <arto@pxlwidgets.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.23", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version ="0.10.9", features = ["blocking"] }
influxdb = { version = "0.3.0", features = ["derive"] }
chrono = "0.4.10"